[package]
name = "lispers"
description = "lisp interpreter in rust for raytracing"
publish = false
version = "0.1.0"

edition = "2021"

[lib]
name = "lispers"
path = "src/lib.rs"

[[bin]]
name = "lisp_demo"
path = "src/bin/lisp_demo.rs"

[[bin]]
name = "repl"
path = "src/bin/repl.rs"

[[bin]]
name = "rt_lisp_demo"
path = "src/bin/rt_lisp_demo.rs"

[[bin]]
name = "rt_interp"
path = "src/bin/rt_interp.rs"

[workspace]
members = [ "lispers-core", "lispers-macro"]

[workspace.dependencies]
lispers-core = {path = "lispers-core"}
lispers-macro = {path = "lispers-macro"}
as-any = "0.3.1"

[dependencies]
as-any = {workspace = true}
futures = "0.3.30"
image = "0.25.5"
nalgebra = "0.33.2"
nix = "0.29.0"
rayon = "1.10.0"
lispers-core = {workspace = true}
lispers-macro = {workspace = true}
